scrollbar bug fix

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,8 @@
 @import "styles/about-team";
 @import "styles/team-member";
 
-body {
+html {
+  width: 100%;
   height: 100%;
 }
 
@@ -23,16 +24,4 @@ body {
   padding: $gutter;
   margin: 0 auto;
   max-width: 1280px;
-}
-
-.section-header {
-  color: $minsk;
-  font-weight: $regular;
-  font-size: 30px;
-  margin-bottom: 2 * $gutter;
-  text-align: center;
-
-  @media (min-width: 768px) {
-    font-size: 60px;
-  }
 }
