--- a/styles/about-team.scss
+++ b/styles/about-team.scss
@@ -1,6 +1,4 @@
 .team {
-  min-height: 100vh;
-
   @media (min-width: 768px) {
     display: flex;
     flex-direction: column;
